@@ -1,5 +1,12 @@
 Release history of Okapi.
 
+upcoming release
+
+  - Updated cache.php to use MEMCACHE_COMPRESSED constant instead
+    of a boolean - getting warning from ext/memcache since 3.0.3
+    (harry fuecks)
+
+
 2009-07-08 :: Version 1.1.8
   - api_views_default: resolving issue which caused import-errors with xsl 
     files due to clearing libxml_errors (marc & harry)
